calico/egress-traffic-blocking/egress-allow-global-network-policy.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: egress-traffic-allow
  labels:
    policy: egress-traffic-allow
spec:
  order: 1000
  types:
    - Egress
  egress:
    - action: Allow
